[package]
name = "web-snapshot"
version = "0.1.0"
authors = ["youbo <youbo@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = '1.0'