[package]
name = "web-snapshot"
version = "0.1.0"
authors = ["youbo <youbo@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
thiserror = "1.0"
priority-queue = "1.1.1"
bytes = "1.0.1"
regex = "1"
lazy_static = "1.4.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }

[[bin]]
name = "main"
path = "src/bin/main.rs"